force-app/main/default/objects/Assignee_Log__c/Assignee_Log__c.object-meta.xml
<CustomObject>
    <description>Assignee (user/queue) log</description>
    <label>QA Assignee Log</label>
    <nameField>
        <label>Assignee Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Assignee Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>