force-app/main/default/objects/Assignee_Log__c/fields/Active_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Active_Assignments__c</fullName>
    <formula>Active_Case_Assignments__c  +  Active_Lead_Assignments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Assignments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>