force-app/main/default/objects/Assignee_Log__c/fields/Active_Case_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Active_Case_Assignments__c</fullName>
    <description>Active case assignments</description>
    <label>Active Case Assignments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>