force-app/main/default/objects/Assignee_Log__c/fields/Active_Lead_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Active_Lead_Assignments__c</fullName>
    <description>Active lead assignments</description>
    <label>Active Lead Assignments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>