force-app/main/default/objects/Assignee_Log__c/fields/Assignment_Group_Member__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Group_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assignment group member</description>
    <label>Assignment Group Member</label>
    <referenceTo>Assignment_Group_Member__c</referenceTo>
    <relationshipName>Assignee_Log</relationshipName>
    <type>Lookup</type>
</CustomField>