force-app/main/default/objects/Assignee_Log__c/fields/Case_Quota_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Case_Quota_Assigned__c</fullName>
    <description>Case quota assigned this quota period</description>
    <label>Case Quota Assigned</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>