force-app/main/default/objects/Assignee_Log__c/fields/Case_Recalculate_Required__c.field-meta.xml
<CustomField>
    <fullName>Case_Recalculate_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case recalculate required</description>
    <label>Case Recalculate Required</label>
    <type>Checkbox</type>
</CustomField>