force-app/main/default/objects/Assignee_Log__c/fields/Last_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment__c</fullName>
    <description>Last assignment date</description>
    <label>Last Assignment</label>
    <type>DateTime</type>
</CustomField>