force-app/main/default/objects/Assignee_Log__c/fields/Last_Assignment_Seq__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Seq__c</fullName>
    <description>Last assignment sequence number</description>
    <label>Last Assignment Seq</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>