force-app/main/default/objects/Assignee_Log__c/fields/Lead_Quota_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quota_Assigned__c</fullName>
    <description>Lead quota assigned this quota period</description>
    <label>Lead Quota Assigned</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>