force-app/main/default/objects/Assignee_Log__c/fields/Lead_Recalculate_Required__c.field-meta.xml
<CustomField>
    <fullName>Lead_Recalculate_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead recalculate required</description>
    <label>Lead Recalculate Required</label>
    <type>Checkbox</type>
</CustomField>