force-app/main/default/objects/Assignee_Log__c/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User id</description>
    <label>User Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignee_Log</relationshipName>
    <type>Lookup</type>
</CustomField>